--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -3,23 +3,25 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="4" vgap="4">
     <margin top="4" left="4" bottom="4" right="4"/>
     <constraints>
-      <xy x="20" y="92" width="1308" height="1057"/>
+      <xy x="20" y="589" width="1080" height="720"/>
     </constraints>
     <properties>
       <background color="-11382962"/>
       <doubleBuffered value="false"/>
       <font name="Courier New" size="14" style="1"/>
       <foreground color="-1"/>
-      <minimumSize width="1080" height="560"/>
+      <maximumSize width="1080" height="720"/>
+      <minimumSize width="1080" height="720"/>
       <opaque value="false"/>
-      <preferredSize width="1080" height="560"/>
+      <preferredSize width="1080" height="720"/>
+      <requestFocusEnabled value="false"/>
     </properties>
     <border type="none"/>
     <children>
       <grid id="e95a1" binding="pnlLocation" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
         </constraints>
         <properties>
           <background color="-11382962"/>
@@ -32,7 +34,7 @@
         <children>
           <component id="b15eb" class="javax.swing.JButton" binding="btnLocation">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-11382962"/>
@@ -51,9 +53,9 @@
       <grid id="81aca" binding="pnlGameLog" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="200" height="400"/>
-            <maximum-size width="400" height="505"/>
+          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="804"/>
+            <maximum-size width="400" height="804"/>
           </grid>
         </constraints>
         <properties>
@@ -67,12 +69,13 @@
         <children>
           <component id="fe6c1" class="javax.swing.JTextArea" binding="txtGameLog">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="400" height="500"/>
-                <maximum-size width="400" height="500"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="400" height="800"/>
+                <maximum-size width="400" height="800"/>
               </grid>
             </constraints>
             <properties>
+              <autoscrolls value="true"/>
               <background color="-11382962"/>
               <doubleBuffered value="false"/>
               <editable value="false"/>
@@ -90,7 +93,10 @@
       <grid id="1414f" binding="pnlMobs" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="200"/>
+            <maximum-size width="-1" height="200"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-11382962"/>
@@ -189,7 +195,7 @@
       <grid id="dd5d3" binding="pnlGame" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-11382962"/>
@@ -310,7 +316,7 @@
             <children>
               <component id="bd30a" class="javax.swing.JButton" binding="btnInv1">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -328,7 +334,7 @@
               </component>
               <component id="8407f" class="javax.swing.JButton" binding="btnInv2">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -346,7 +352,7 @@
               </component>
               <component id="5bf5" class="javax.swing.JButton" binding="btnInv3">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -364,7 +370,7 @@
               </component>
               <component id="47bcd" class="javax.swing.JButton" binding="btnInv4">
                 <constraints>
-                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -401,7 +407,7 @@
             <children>
               <component id="d75d5" class="javax.swing.JButton" binding="btnMainWeapon">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -419,7 +425,7 @@
               </component>
               <component id="40e19" class="javax.swing.JButton" binding="btnHead">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -437,7 +443,7 @@
               </component>
               <component id="9f7f1" class="javax.swing.JButton" binding="btnBody">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -455,7 +461,7 @@
               </component>
               <component id="bffb8" class="javax.swing.JButton" binding="btnMisc">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="96" height="96"/>
                     <preferred-size width="96" height="96"/>
                     <maximum-size width="96" height="96"/>
@@ -475,9 +481,12 @@
           </grid>
         </children>
       </grid>
-      <grid id="62695" binding="pnlLoots" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="62695" binding="pnlLoots" layout-manager="FlowLayout" hgap="4" vgap="4" flow-align="1">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="40"/>
+            <maximum-size width="-1" height="40"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-11382962"/>
