--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -28,6 +28,7 @@
         <properties>
           <background color="-11382962"/>
           <doubleBuffered value="false"/>
+          <enabled value="true"/>
           <font name="Courier New" size="14" style="1"/>
           <foreground color="-1"/>
           <opaque value="false"/>
@@ -36,7 +37,7 @@
         <children>
           <component id="b15eb" class="javax.swing.JButton" binding="btnLocation">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="2" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="26"/>
                 <maximum-size width="-1" height="26"/>
               </grid>
@@ -53,6 +54,18 @@
               <horizontalTextPosition value="0"/>
               <opaque value="false"/>
               <text value="(location)"/>
+            </properties>
+          </component>
+          <component id="92c8e" class="javax.swing.JLabel" binding="lblTurn">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="690" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <enabled value="true"/>
+              <font name="DialogInput" size="20" style="1"/>
+              <foreground color="-1"/>
+              <text value="Turn 1"/>
             </properties>
           </component>
         </children>
